--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   </audio>
   <div id="main">
     <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
+    <div>
+      <a href="alipay://platformapi/startapp?appid=20000067&url="> 测试支付宝链接</a>
+    </div>
     <div id="wrap">
       <div id="text">
         <div id="code">
